<resources>
    <string name="app_name">Quiz Quiz Bang Bang Trivia</string>
    <string name="quizzer">POW! Right in the quizzer!</string>
    <string name="qblogo">Quiz Quiz Bang Bang Logo</string>
    <string name="about">About</string>
    <string name="options">Options</string>
    <string name="player_stats">Player Stats</string>
    <string name="play_by_category">Play By Category</string>
    <string name="play_the_game">Play The Game</string>
    <string name="next">Next</string>
    <string name="quit">Quit</string>
    <string name="back">back</string>
    <string name="correct">Correct!</string>
    <string name="nope">Nope!</string>
    <string name="question">The Question</string>
    <string name="dummytext">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla in rutrum libero. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Vestibulum dictum, augue in volutpat mollis, risus nunc varius risus, a tempus lacus nibh vitae diam. Donec tempor volutpat nulla, convallis interdum erat. Mauris tristique gravida ante a molestie. Mauris accumsan ultricies volutpat. Praesent velit tortor, mattis non nibh eu, rutrum lacinia lectus. Phasellus nec mauris nec est ultrices imperdiet. Donec vitae auctor purus. Integer interdum nisi ac felis facilisis, nec gravida quam tempus. Vestibulum consequat malesuada massa posuere faucibus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.</string>
    <string name="ans1">Answer 1</string>
    <string name="ans2">Answer 2</string>
    <string name="ans3">Answer 3</string>
    <string name="ans4">Answer 4</string>
    <string name="your_answer">Your Answer</string>
    <string name="category_select">Select a Category!</string>
    <string name="category_1">The Arts</string>
    <string name="category_2">Games/Hobbies</string>
    <string name="category_3">Math and Science</string>
    <string name="category_4">Media</string>
    <string name="category_5">Society/Culture</string>
    <string name="category_6">Social Sciences</string>
    <string name="category_7">Sports</string>
    <string name="category_8">Technology</string>
    <string name="my_stats">My Stats</string>
    <string name="average_score">Average Score</string>
    <string name="best_cat">Strongest Category</string>
    <string name="worst_cat">Weakest Category</string>
    <string name="fav_cat">Favorite Category</string>
    <string name="least_fav_cat">Least Favorite Category</string>
    <string name="go_back">Back to Main Menu</string>
    <string name="correct_text">Correct!</string>
    <string name="nope_text">Nope!</string>
    <string name="question_image">Question Image</string>
    <string name="current_score">Current Score: 0/0</string>
    <string name="options_go_here">OPTIONS GO HERE</string>
</resources>
